results/classifier/118/review/1934
TCG: 0.916
graphic: 0.833
performance: 0.767
PID: 0.708
socket: 0.691
mistranslation: 0.677
semantic: 0.673
device: 0.671
ppc: 0.671
files: 0.668
VMM: 0.656
arm: 0.653
architecture: 0.622
kernel: 0.621
network: 0.620
vnc: 0.615
register: 0.596
risc-v: 0.568
debug: 0.554
peripherals: 0.507
hypervisor: 0.481
boot: 0.479
permissions: 0.471
user-level: 0.424
KVM: 0.412
assembly: 0.402
virtual: 0.308
i386: 0.206
x86: 0.055
--------------------
TCG: 0.648
files: 0.255
debug: 0.093
kernel: 0.068
register: 0.039
VMM: 0.034
hypervisor: 0.030
PID: 0.027
risc-v: 0.027
performance: 0.024
KVM: 0.021
semantic: 0.012
device: 0.010
virtual: 0.009
architecture: 0.009
assembly: 0.008
vnc: 0.006
user-level: 0.004
boot: 0.004
socket: 0.003
peripherals: 0.003
network: 0.002
graphic: 0.002
permissions: 0.001
mistranslation: 0.001
ppc: 0.000
arm: 0.000
x86: 0.000
i386: 0.000

Build failure on s390x with Clang 17 due to int128 alignment used in `__sync_` operations
Description of problem:
We experienced this downstream, but filing this here since the code still seems to be the same in git.

https://reviews.llvm.org/D143813 introduced this warning since, according to the description, `__int128`
needs to be 8-byte aligned on s390 but the code in `host/include/generic/host/atomic128-ldst.h` unconditionally uses 16-byte alignment.

The output is:

```
In file included from ../accel/tcg/cputlb.c:32:
In file included from /builddir/build/BUILD/qemu-8.1.0/include/exec/helper-proto-common.h:10:
In file included from /builddir/build/BUILD/qemu-8.1.0/include/qemu/atomic128.h:62:
/builddir/build/BUILD/qemu-8.1.0/host/include/generic/host/atomic128-ldst.h:68:15: error: __sync builtin operation MUST have natural alignment (consider using __atomic). [-Werror,-Wsync-alignment]
   68 |     } while (!__sync_bool_compare_and_swap_16(ptr_align, old, new.i));
      |               ^
In file included from ../accel/tcg/cputlb.c:32:
In file included from /builddir/build/BUILD/qemu-8.1.0/include/exec/helper-proto-common.h:10:
In file included from /builddir/build/BUILD/qemu-8.1.0/include/qemu/atomic128.h:61:
/builddir/build/BUILD/qemu-8.1.0/host/include/generic/host/atomic128-cas.h:36:11: error: __sync builtin operation MUST have natural alignment (consider using __atomic). [-Werror,-Wsync-alignment]
   36 |     r.i = __sync_val_compare_and_swap_16(ptr_align, c.i, n.i);
      |           ^
2 errors generated.
```
